--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <title>Nuevo Producto</title>
+  <link rel="stylesheet" href="./index.css">
+  <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
   <div class="container">
@@ -16,23 +18,23 @@
     </div>
     <div class="row">
       <div class="col">
-        <form action="/api/productos" method="post">
+        <div id="produForm">
           <div class="form-group">
-            <label for="POST-name">Title: </label>
-            <input class="form-control" id="POST-name" type="text" name="title" />
+            <label for="title">Title: </label>
+            <input class="form-control" id="title" type="text" name="title" />
           </div>
           <div class="form-group">
-            <label for="POST-name">Price: </label>
-            <input class="form-control" id="POST-name" type="number" name="price" />
+            <label for="price">Price: </label>
+            <input class="form-control" id="price" type="number" name="price" />
           </div>
           <div class="form-group">
-            <label for="POST-name">Thumbail: </label>
-            <input class="form-control" id="POST-name" type="text" name="thumbail" />  
+            <label for="thumbail">Thumbail: </label>
+            <input class="form-control" id="thumbail" type="text" name="thumbail" />  
           </div>
-          <div class="form-group">
-            <input type="submit" class="btn btn-outline-success" value="GUARDAR">
+          <div class="form-group">            
+            <button class="btn btn-outline-success" id="btnGuardar">GUARDAR</button>
           </div>
-        </form>
+        </div>
       </div>
     </div>
     <div class="row">
@@ -41,11 +43,42 @@
         <a href="api/productos" class="btn btn-outline-primary">Productos</a>
         <a href="api/productosPug" class="btn btn-outline-secondary">Productos Pug</a>
         <a href="api/productosEjs" class="btn btn-outline-dark">Productos EJS</a>
-      
+      </div>
+    </div><br>
+    <div class="row">
+      <div class="col" >
+        <table class="table table-striped table-hover" id="tablaProd" style="display: none;">
+          <thead class="thead-dark">
+            <tr><th>ID</th><th>TITULO</th><th>PRECIO</th><th>URL</th></tr>
+          </thead>
+          <tbody id="tablaProdB">
+
+          </tbody>
+        </table>
       </div>
     </div>
+    
+    <div class="row chatCont">
+      <div class="col chatCol">
+        <div class="form-group" align="center">
+          <h1 class="alert alert-success" role="alert">Chat Online</h1>
+        </div>
+        <div class="form-group">
+          <label for="chatCorreo">Correo: </label>
+          <input type="email" placeholder="Ej. sucorreo@sudominio.com" class="form-control" style="width: 300px;" id="chatCorreo"/>
+        </div>
+        <div class="form-group">
+          <label for="chatMensaje">Mensaje: </label>
+          <input class="form-control" id="chatMensaje" type="text" name="chatMensaje" />            
+        </div>
+        <div class="form-group">
+          <button class="btn btn-outline-info btnChat" id="btnChat">Enviar</button>          
+        </div>
+        <div class="form-group">
+          <textarea type="text" class="form-control" style="width: 100%;height:300px;" id="chatContenedor"></textarea>
+        </div>
+    </div>
   </div>
-
-  
+  <script src="./index.js"></script>
 </body>
 </html>
