Añado websocket y estilo a la tabla

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     </div><br>
     <div class="row">
       <div class="col" >
-        <table class="table table-striped table-hover" id="tablaProd" style="display: none;">
+        <table class="table table-striped table-hover" width="900" id="tablaProd" style="display: none;">
           <thead class="thead-dark">
             <tr><th>ID</th><th>TITULO</th><th>PRECIO</th><th>URL</th></tr>
           </thead>
@@ -57,7 +57,7 @@
         </table>
       </div>
     </div>
-    
+    <br>
     <div class="row chatCont">
       <div class="col chatCol">
         <div class="form-group" align="center">
